<resources>
    <string name="app_name">外勤系统</string>
    <string name="read">读取</string>
    <string name="management">信息化管理外勤系统</string>
    <string name="user_name">用户名称</string>
    <string name="effect">故障现象</string>
    <string name="address">用户地址</string>
    <string name="time">申报时间</string>
    <string name="action">操作</string>
    <string name="goCheck">去维修</string>
    <string name="phone">电话号码</string>
    <string name="hint_text">请输入...</string>
    <string name="fxh">分线盒</string>
    <string name="qxz">请选择</string>
    <string name="fscs">复审测试</string>
    <string name="qsr">请输入...</string>
    <string name="user_sign">用户签名</string>
    <string name="submit">提交</string>
    <string name="over">完成</string>
    <string name="wwc">未完成</string>
    <string name="cxr">查修人</string>
</resources>
