<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/content_view"
    android:fitsSystemWindows="false"
    android:layout_marginLeft="40px"
    android:layout_marginRight="40px">
    
    <!--ListView 头部信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54px"
        android:orientation="horizontal"
        android:layout_marginTop="40px"
        android:background="@drawable/bg_corner_gray"
        >

        <TextView
            android:layout_width="144px"
            android:layout_height="match_parent"
            android:text="@string/cxr"
            android:textSize="26px"
            android:textColor="@color/white"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="278px"
            android:layout_height="match_parent"
            android:text="@string/effect"
            android:textSize="26px"
            android:textColor="@color/white"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="412px"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textSize="26px"
            android:textColor="@color/white"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="144px"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textSize="26px"
            android:textColor="@color/white"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="128px"
            android:layout_height="match_parent"
            android:text="@string/action"
            android:textSize="26px"
            android:textColor="@color/white"
            android:singleLine="true"
            android:gravity="center"/>

    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_refresh_list"
        android:listSelector="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:scrollbars="none"
        android:dividerPadding="0dp"
        android:divider="@null"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="disabled"
        android:paddingTop="20px"

        />

    </LinearLayout>